# rendering-engine-for-school

./: .gitignore  CMakeLists.txt  LICENCE  README.md
engine/: CMakeLists.txt  ccubemap.cpp  ccubemap.hpp  cmesh.hpp  cmodel.hpp  cshader.cpp  cshader.hpp  cwindowopengl46.cpp  cwindowopengl46.hpp  iwindow.hpp  main.cpp
lib/x64/windows/: SDL2main.lib  glew32.lib
